css/grayscale.scss
---
---

@import "variables";
@import "mixins";

/*!
 * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    width: 100%;
    height: 100%;
    font-family: "Open Sans",Helvetica,Arial,sans-serif;
    font-weight: 100;
    color: $font-color;
    letter-spacing: 0.05em;
    background-color: $primary-color;
}

html {
    width: 100%;
    height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 35px;
    text-transform: uppercase;
    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 300;
    letter-spacing: 1px;
}

h4 {
    a.category {
        color: inherit;
    }

    a.tag {
        font-size: 12px;
    }
}

p {
    margin: 0 0 25px;
    font-size: 18px;
    line-height: 1.5;
    @media(min-width:768px) {
        margin: 0 0 35px;
        font-size: 20px;
        line-height: 1.8;
    }
}

div {
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  -o-user-select: text;
  user-select: text;
}

a {
    color: $secondary-color;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
    &:hover,
    &:focus {
        text-decoration: none;
        color: darken($secondary-color,20%);
    }
}

.navbar-custom {
    margin-bottom: 0;
    border-bottom: 1px solid rgba($font-color, 0.3);
    text-transform: uppercase;
    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
    background-color: $navbar-sm-background-color;

    /* Fix height limit and scroll for small screen and many items menu */
    max-height: 100%;
    overflow-y: auto;

    .navbar-toggle {
        padding: 4px 6px;
        font-size: 16px;
        color: $navbar-color;
        &:focus,
        &:active {
            outline: none;
        }
    }
    .navbar-brand {
        font-weight: 700;
        &:focus {
            outline: none;
        }
    }
    a {
        color: $navbar-color;
        @if $header-text-shadow{
            text-shadow: 0 0 2px rgba(0, 0, 0, 0.8);
        }
    }
    .nav {
        text-align: center;
        li {
            a {
                -webkit-transition: background .3s ease-in-out;
                -moz-transition: background .3s ease-in-out;
                transition: background .3s ease-in-out;
                &:hover {
                    /* color: rgba($font-color, 0.8); */
                    outline: none;
                    background-color: rgba($font-color, 0.3);
                }
                &:focus,
                &:active {
                    outline: none;
                      background-color: rgba($font-color, 0.3);
                }
            }
            &.active {
                outline: none;
                a {
                    background-color: rgba($font-color, 0.3);
                    &:hover {
                        color: $navbar-color;
                    }
                }
            }
        }
    }
    @media(min-width:768px) {
        padding: 20px 0;
        border-bottom: none;
        letter-spacing: 1px;
        background: $navbar-lg-background;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
        &.top-nav-collapse {
            padding: 0;
            background: $navbar-lg-collapse-background-color;
            border-bottom: 1px solid rgba($font-color, 0.3);
        }
    }
}

.intro {
    display: table;
    width: 100%;
    height: auto;
    padding: 100px 0;
    text-align: center;
    color: $intro-text-color;
    {% if site.background-img %}
    background: url({{ site.background-img }}) center center fixed; 
    background-size: cover; 
    background-repeat: no-repeat;
    {% endif %}
    background-color: $header-background-color;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    .intro-body {
        display: table-cell;
        vertical-align: middle;
        .brand-heading {
            font-size: 40px;
        }
        .intro-text {
            font-size: 18px;
            @if $navbar-text-shadow {
                text-shadow: 1px 0 1px #000;
            }
        }
    }
    @media(min-width:768px) {
        height: 100%;
        padding: 0;
        .intro-body {
            .brand-heading {
                font-size: 90px;
            }
            .intro-text {
                font-size: 26px;
            }
        }
    }
    @media(max-width:767px) {
        background-attachment: scroll;
    }
}
.post-intro {
    display: table;
    width: 100%;
    height: 100%;
    padding: 0;
    text-align: center;
    color: $intro-text-color;
    background-attachment: fixed;
    background-color: $header-background-color;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    .intro-body {
        display: table-cell;
        vertical-align: middle;
        backdrop-filter: blur(4px) brightness(70%);
        .brand-heading {
            font-size: 40px;
        }
        .intro-text {
            font-size: 18px;
            @if $navbar-text-shadow {
                text-shadow: 1px 0 1px #000;
            }
        }
    }
    @media(min-width:768px) {
        height: 100%;
        padding: 0;
        .intro-body {
            .brand-heading {
                font-size: 90px;
            }
            .intro-text {
                font-size: 26px;
            }
        }
    }
}
/* ... */

